<resources>
    <string name="app_name">Калькулятор покупок</string>
    <string name="action_settings">Settings</string>
    <string name="create_tag">Добавить тэг</string>
    <string name="add_bag" >Добавить товар</string>
    <string name="clear_bag">Очистить корзину</string>
    <string name="divider">Коэффициент деления</string>
    <string name="tag_name_edit_field">Наименование тэга</string>
    <string name="editor_ok_button_label">ОК</string>
    <string name="editor_cancel_button_label">Отмена</string>
    <string name="content_label">content</string>
    <string name="add_label_menu_item">Добавить</string>
    <string name="count_label">Количество</string>
    <string name="name_item_label">Наименование продукта</string>
    <string name="tag_label">Тэг</string>
    <string name="price_for_one_label">Цена за штуку/кг/л</string>
    <string name="nameless">Безымянный</string>
    <string name="edit_tag">Изменить тэг</string>
    <string name="edit">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="add">Добавить</string>
    <string name="edit_title_item_dialog">Изменить товар</string>
    <string name="save">Сохранить</string>
    <string name="picture_not_taken">Изображение не сделано!</string>
    <string name="permission_denied">Разрешение откланено</string>
    <string name="no_name_item">Товар без имени</string>
    <string name="please_add_tags">Пожалуйста, добавьте тэги</string>
    <string-array name="unit_label">
        <item>Шт.</item>
        <item>Кг.</item>
        <item>Л.</item>
        <item>г.</item>
    </string-array>
    <string name="empty_string" />
    <string name="toolbar_title">Калькулятор покупок</string>
    <string name="photo_icon_description">photo_icon</string>

</resources>
