<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_container">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tag_name_edit_field"
            android:id="@+id/name_edit_field"
            android:layout_margin="5dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/divider_container"
        android:layout_below="@+id/name_container"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/divider"
            android:id="@+id/count_edit_field"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider_container"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:visibility="gone">

        <Button
            android:text="@string/editor_ok_button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editor_ok_button"
            android:layout_weight="1"
            android:theme="@style/MyButton"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <Button
            android:text="@string/editor_cancel_button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editor_cancel_button"
            android:layout_weight="1"
            android:theme="@style/MyButton"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>
</RelativeLayout>