<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name__item_container">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_item_label"
            android:id="@+id/name_item_edit_field" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name__item_container"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/container_tag_spinner">

        <TextView
            android:text="@string/tag_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tag_spinner_list_label"
            android:textSize="18sp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tag_spinner_list"
            android:layout_below="@+id/tag_spinner_list_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container_tag_spinner"
        android:id="@+id/count_item_container">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/count__item_container">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/count_label"
            android:id="@+id/count_item_picker"
            android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/price_item_container"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/count_item_container">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:hint="@string/price_for_one_label"
            android:id="@+id/price_item_field" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

</RelativeLayout>